Migration Java 21 SpringBoot 3.2.2 (#1548)
* BREAKING CHANGE: update POM's to Java 21. Update dependencies

* BREAKING CHANGE: migrate from springfox swagger to springdoc openapi

* BREAKING CHANGE: migrate from javax to jakarta APIs

* BREAKING CHANGE: update security config (spring boot 2 -> 3)

* fix: remove deprecated JJWT methods

* BREAKING CHANGE: refactor properties. refactor authentication secret key to env var

* style: formatting fixes

* test: test refactoring

* fix: fix wrong spring data JPA method name in CertificateRepository

* feat: add missing constants from dev branch

* feat: remove zonedClock bean, it's used in one place and can be created there

* fix: fix some leftover javax values

* fix: fix liquibase regression

* fix: rename updated DataJPA method references

* test: refactor tests

* JwtTool updated deprecated methods

* JwtAuthenticationProvider updated deprecated methods

* Updated Date and Calendar with Instance

* Checkstyle format + slight changes

* Temporarily set a default value instead of GREENCITY_TOKEN_KEY

* Fix: BigOrderTableRepositoryTest now passes by resolving log inclusion issues and comparator selection. Reduced boilerplate by consolidating <column/> tags.

* Marked tests in AccessTokenAuthenticationFilterTest as @Disabled with clarification: "Not implemented by the original author."

Formatted the code to ensure consistency and readability.

* Refactored core annotations to replace @Parameters with consecutive @Parameter annotations, reducing boilerplate. Also corrected a typo.

* Refactor and cleanup configurations

- Added 2 new constants in AppConstant to avoid string duplication in SecurityConfig.
- Renamed some constants in AppConstant to adhere to variable naming conventions.
- Renamed BotsConfgProp to BotsConfigProp.
- Formatted blank lines for improved readability.
- Switched to constructor injection in WebMvcConfig and moved @Lazy annotation to the construc