@@ -3,95 +3,97 @@ package greencity.security.providers;
 import greencity.security.JwtTool;
 import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.Jwts;
-
-import org.assertj.core.util.Arrays;
-import org.junit.jupiter.api.Assertions;
+import io.jsonwebtoken.MalformedJwtException;
+import io.jsonwebtoken.io.Encoders;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.Collections;
 import java.util.Date;
-import java.util.stream.Collectors;
+import java.util.List;
 import java.util.stream.Stream;
+import javax.crypto.SecretKey;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 /**
  * @author Yurii Koval
  */
 class JwtAuthenticationProviderTest {
-
-    enum Role {
+    private enum Role {
         ROLE_ADMIN
     }
 
-    private final Role expectedRole = Role.ROLE_ADMIN;
-
-    @Mock
-    JwtTool jwtTool;
+    private static final Role expectedRole = Role.ROLE_ADMIN;
 
     private JwtAuthenticationProvider jwtAuthenticationProvider;
+    private static final String EXPECTED_EMAIL = "qqq@email.com";
+    private static final SecretKey secretKey = Jwts.SIG.HS512.key().build();
 
     @BeforeEach
     public void setUp() {
-        MockitoAnnotations.initMocks(this);
+        JwtTool jwtTool = mock(JwtTool.class);
         jwtAuthenticationProvider = new JwtAuthenticationProvider(jwtTool);
+
+        final String keyString = Encoders.BASE64.encode(secretKey.getEncoded());
+        when(jwtTool.getAccessTokenKey()).thenReturn(keyString);
     }
 
     @Test
     void authenticateWithValidAccessToken() {
-        final String accessToken = "eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJxcXFAZW1haWwu"
-            + "Y29tIiwicm9sZSI6WyJST0xFX0FETUlOIl0sImlhdCI6MTY1NDYzNjc2OSwiZXh"
-            + "wIjo2MTY1NDYzNjcwOX0.Ug-epWHV0a9f7BFPa1geKhqWysWkOdoG5wd4h2Hzpi4";
-        when(jwtTool.getAccessTokenKey()).thenReturn("123123123");
+        String accessToken = Jwts.builder()
+            .signWith(secretKey)
+            .subject(EXPECTED_EMAIL)
+            .issuedAt(Date.from(Instant.now()))
+            .expiration(Date.from(Instant.now().plus(30, ChronoUnit.DAYS)))
+            .claim("role", List.of(expectedRole)).compact();
         Authentication authentication = new UsernamePasswordAuthenticationToken(
             accessToken,
             null);
         Authentication actual = jwtAuthenticationProvider.authenticate(authentication);
-        final String expectedEmail = "qqq@email.com";
-        assertEquals(expectedEmail, actual.getPrincipal());
+
+        assertEquals(EXPECTED_EMAIL, actual.getPrincipal());
         assertEquals(
             Stream.of(expectedRole)
                 .map(Role::toString)
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList()),
+                .toList(),
             actual.getAuthorities());
         assertEquals(Collections.emptyList(), actual.getCredentials());
     }
 
     @Test
     void authenticateWithExpiredAccessToken() {
-        when(jwtTool.getAccessTokenKey()).thenReturn("123123123");
-        Authentication authentication = new UsernamePasswordAuthenticationToken(
-            "eyJhbGciOiJIUzI1NiJ9"
-                + ".eyJzdWIiOiJ0ZXN0QGdtYWlsLmNvbSIsImF1dGhvcml0aWVzIjpbIlJPTEVfVVNFUiJdLCJpYXQiOjE1Nz"
-                + "U4Mzk3OTMsImV4cCI6MTU3NTg0MDY5M30"
-                + ".DYna1ycZd7eaUBrXKGzYvEMwcybe7l5YiliOR-LfyRw",
-            null);
-        Assertions
-            .assertThrows(ExpiredJwtException.class,
-                () -> jwtAuthenticationProvider.authenticate(authentication));
+        String accessToken = Jwts.builder()
+            .signWith(secretKey)
+            .subject(EXPECTED_EMAIL)
+            .issuedAt(Date.from(Instant.now().minus(30, ChronoUnit.DAYS)))
+            .expiration(Date.from(Instant.now().minus(24, ChronoUnit.DAYS)))
+            .claim("role", List.of(expectedRole)).compact();
+        Authentication authentication = new UsernamePasswordAuthenticationToken(accessToken, null);
+
+        assertThrows(ExpiredJwtException.class,
+            () -> jwtAuthenticationProvider.authenticate(authentication));
     }
 
     @Test
     void authenticateWithMalformedAccessToken() {
-        when(jwtTool.getAccessTokenKey()).thenReturn("123123123");
         Authentication authentication = new UsernamePasswordAuthenticationToken(
             "Malformed"
                 + ".eyJzdWIiOiJ0ZXN0QGdtYWlsLmNvbSIsImF1dGhvcml0aWVzIjpbIlJPTEVfVVNFUiJdLCJpYXQiOjE1Nz"
                 + "U4Mzk3OTMsImV4cCI6MTU3NTg0MDY5M30"
                 + ".DYna1ycZd7eaUBrXKGzYvEMwcybe7l5YiliOR-LfyRw",
             null);
-        Assertions
-            .assertThrows(Exception.class,
-                () -> jwtAuthenticationProvider.authenticate(authentication));
+
+        assertThrows(MalformedJwtException.class,
+            () -> jwtAuthenticationProvider.authenticate(authentication));
     }
 
     @Test
